# minimal-stack-cabal

./: Main.hs  README.md  minimal-stack-cabal.cabal
src/: Lib.hs
test/: Main.hs
