name: minimal-stack-cabal
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

executable main
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base, minimal-stack-cabal

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends: base
  exposed-modules: Lib

test-suite minimal-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base
               , hspec
